Fix sales order line numbering
